--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Monitoring-Generator-TestConfig
-version:            0.27_2
+version:            0.28
 abstract:           generate monitoring configurations (nagios/icinga/shinken)
 author:
     - Sven Nierlein <nierlein@cpan.org>
@@ -17,7 +17,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.55_02
+generated_by:       ExtUtils::MakeMaker version 6.54
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
