--- a/META.yml
+++ b/META.yml
@@ -3,12 +3,13 @@ abstract: 'generate monitoring configurations (nagios/icinga/shinken)'
 author:
   - 'Sven Nierlein, <nierlein@cpan.org>'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.36
   Test::More: 0.87
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.36
 distribution_type: module
-generated_by: 'Module::Install version 1.01'
+dynamic_config: 1
+generated_by: 'Module::Install version 1.06'
 license: gpl3
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -26,4 +27,4 @@ resources:
   homepage: https://github.com/sni/Monitoring-Generator-TestConfig
   license: http://opensource.org/licenses/gpl-3.0.html
   repository: https://github.com/sni/Monitoring-Generator-TestConfig
-version: 0.42
+version: 0.44
